tests/baselines/reference/unmetTypeConstraintInJSDocImportCall.errors.txt
file2.js(3,36): error TS2344: Type 'T' does not satisfy the constraint 'string'.


==== file1.js (0 errors) ====
    /**
     * @template {string} T
     * @typedef {{ foo: T }} Foo
     */
    
    export default {};
    
==== file2.js (1 errors) ====
    /**
     * @template T
     * @typedef {import('./file1').Foo<T>} Bar
                                       ~
!!! error TS2344: Type 'T' does not satisfy the constraint 'string'.
!!! related TS2208 file2.js:2:14: This type parameter might need an `extends string` constraint.
     */
    